--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,34 @@
       padding-top: 128px;
       padding-bottom: 128px;
     }
+
+    div.dragClass {
+      background-color: #2672EC;
+    }
+
+    .dropable {
+      background-color: #555;
+      padding: 16px;
+      border-radius: 8px;
+      margin: 16px 0;
+      min-height: 56px;
+    }
+
+    br {
+       margin: 5px;
+    }
+
+    #rowDiv {
+      text-align: right;
+    }
+
+    .fit {
+      overflow:auto;
+    }
+
+    .piv {
+      cursor: pointer;
+    }
   </style>
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
