Getting rid of the CSS in head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,42 +14,10 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{{ "/css/cover.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/dripl.css" | prepend: site.baseurl }}">
+  <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 
   <style>
-    .section-footer {
-      background-color: #333333;
-      color: #fff;
-      padding-top: 128px;
-      padding-bottom: 128px;
-    }
 
-    div.dragClass {
-      background-color: #2672EC;
-    }
-
-    .dropable {
-      background-color: #555;
-      padding: 16px;
-      border-radius: 8px;
-      margin: 16px 0;
-      min-height: 56px;
-    }
-
-    br {
-       margin: 5px;
-    }
-
-    #rowDiv {
-      text-align: right;
-    }
-
-    .fit {
-      overflow:auto;
-    }
-
-    .piv {
-      cursor: pointer;
-    }
   </style>
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
