Including the script that loads in the settings.

--- a/_includes/script.html
+++ b/_includes/script.html
@@ -3,4 +3,10 @@
 <script src="{{ "/js/jquery.parse.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/pivot.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/gchart_renderers.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript">
+  var initData = "{{ "/data/potus.csv" | prepend: site.baseurl }}";
+  var mapRegion = "World";
+  $('body').css('background-image', 'url("{{ config.background }}")');
+  //var backgroundVar = "{{ config.background }}";
+</script>
 <script src="{{ "/js/dripl.js" | prepend: site.baseurl }}"></script>
