--- a/css/cover.css
+++ b/css/cover.css
@@ -4,7 +4,6 @@ body {
 }
 body {
   text-align: center;
-  box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 
 .site-wrapper {
@@ -23,7 +22,7 @@ body {
 }
 
 .inner {
-  padding: 30px;
+  padding: 0px;
 }
 
 .cover {
@@ -41,7 +40,7 @@ body {
 
 @media (min-width: 992px) {
   .cover-container {
-    width: 700px;
+    width: 100%;
   }
 }
 
