--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,8 +1,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-<script src="{{ "/js/jquery.parse.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/pivot.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/gchart_renderers.js" | prepend: site.baseurl }}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pivottable/2.0.2/pivot.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pivottable/2.0.2/gchart_renderers.min.js"></script>
 <script type="text/javascript">
   var initData = "{{ "/data/potus.csv" | prepend: site.baseurl }}";
   var mapRegion = "World";
