--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,15 +5,9 @@
 
   <body>
 
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+    <div id="wrapper">
+      {{ content }}
     </div>
-
-    {% include footer.html %}
 
     {% include script.html %}
 
