--- a/css/cover.css
+++ b/css/cover.css
@@ -1,68 +1,125 @@
-html,
-body {
-  height: 100%;
-}
-body {
-  text-align: center;
-  padding-top: 50px;
+/*!
+ * Start Bootstrap - Simple Sidebar HTML Template (http://startbootstrap.com)
+ * Code licensed under the Apache License v2.0.
+ * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+ */
+
+/* Toggle Styles */
+
+#wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%;
-  min-height: 100%;
-}
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
+#wrapper.toggled {
+    padding-left: 250px;
 }
 
-.inner {
-  padding: 0px;
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    left: 250px;
+    width: 0;
+    height: 100%;
+    margin-left: -250px;
+    overflow-y: auto;
+    background: #333;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 
-.cover {
-  padding: 0 20px;
+#wrapper.toggled #sidebar-wrapper {
+    width: 250px;
 }
 
-@media (min-width: 768px) {
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
-}
-
-@media (min-width: 992px) {
-  .cover-container {
+#page-content-wrapper {
     width: 100%;
-  }
+    position: absolute;
+    padding: 15px;
 }
 
-.brand {
-  color: #fff;
-  font-family: 'Lilita One', cursive;
-  font-size: 8em;
-  text-shadow: 8px 8px 16px rgba(0,0,0,.75);
+#wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
 }
 
-.message {
-  color: #fff;
-  font-family: sans-serif;
-  font-size: 2em;
-  text-shadow: 2px 2px 8px rgba(0,0,0,.75);
-  font-weight: bold;
+/* Sidebar Styles */
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 20px;
+    list-style: none;
+    color: #BBB;
 }
 
-.btn-hg {
-  font-size: 1.2em;
-  padding: 16px 32px;
-  margin: 24px 8px;
-  font-weight: bold; 
+.sidebar-nav li h6 {
+  font-weight: normal;
+}
+
+.sidebar-nav li h5 {
+  font-weight: normal;
+  padding-top: 10px;
+  font-size: 12px;
+}
+
+.sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #EEE;
+    background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+    text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand a {
+    font-size: 24px;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    color: #EEE;
+}
+
+.sidebar-nav > li a {
+    color: #EEE;
+}
+
+.sidebar-nav > li a:hover {
+    color: #FFF;
+    background: none;
+}
+
+@media(min-width:768px) {
+    #wrapper {
+        padding-left: 250px;
+    }
+
+    #wrapper.toggled {
+        padding-left: 0;
+    }
+
+    #sidebar-wrapper {
+        width: 250px;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        width: 0;
+    }
+
+    #page-content-wrapper {
+        padding: 20px;
+        position: relative;
+    }
+
+    #wrapper.toggled #page-content-wrapper {
+        position: relative;
+        margin-right: 0;
+    }
 }
