--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,9 @@
   <!-- Bootstrap core CSS -->
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Font CSS -->
+  <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{{ "/css/cover.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/dripl.css" | prepend: site.baseurl }}">
