--- a/_includes/script.html
+++ b/_includes/script.html
@@ -25,6 +25,7 @@
 <script type="text/javascript">
   var initData = "{{ "/data/potus.csv" | prepend: site.baseurl }}";
   var mapRegion = "World";
+  var dateCols = $.map("{{ site.date_columns }}".split(','), $.trim);
 </script>
 <script src="{{ "/js/dripl.js" | prepend: site.baseurl }}"></script>
 <script>
