Introducing the tour

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,9 @@
   <!-- Font CSS -->
   <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
 
+  <!-- Tour CSS -->
+  <link href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.10.3/css/bootstrap-tour.min.css' rel='stylesheet' type='text/css'>
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{{ "/css/cover.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/dripl.css" | prepend: site.baseurl }}">
