--- a/_includes/script.html
+++ b/_includes/script.html
@@ -31,7 +31,7 @@
   var mapRegion = "World";
   var dateCols = $.map("{{ site.date_columns }}".split(','), $.trim);
 </script>
-<script src="{{ "/js/dripl.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/app.js" | prepend: site.baseurl }}"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
