--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{{ "/css/cover.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/dripl.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/app.css" | prepend: site.baseurl }}">
   <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 
   <style>
