Changing dataset to Pakistan T20

--- a/_includes/script.html
+++ b/_includes/script.html
@@ -27,7 +27,7 @@
 
 
 <script type="text/javascript">
-  var initData = "{{ "/data/potus.csv" | prepend: site.baseurl }}";
+  var initData = "{{ "/data/data.csv" | prepend: site.baseurl }}";
   var mapRegion = "World";
   var dateCols = $.map("{{ site.date_columns }}".split(','), $.trim);
 </script>
